grammars/grammar.txt
__: r"[ \n\t]+"?

verbatim_block: "@verbatim" "%{" block:r"^(.*?)(?=%})" "%}" "\n"+

setting: "@set" r"[ \t]+" setting:r"[a-zA-Z_][a-zA-Z0-9_]*" "\n"+

rule_name: r"[a-zA-Z_][a-zA-Z0-9_]*"

literal: '"' r'[^"]*' '"' | "'" r"[^']*" "'"

regex: 'r' literal

atom: regex | literal | rule_name:rule_name | '(' parenthesized_alts:alternatives ')'

maybe: atom:atom '?'

one_or_more: atom:atom '+'

zero_or_more: atom:atom '*'

lookahead: '&' item:item

negative_lookahead: '!' item:item

item: maybe | one_or_more | zero_or_more | lookahead | negative_lookahead | atom

named_item: name:(name:r"[a-zA-Z_][a-zA-Z0-9_]*" ':')? item:item

alternative: named_item+

alternatives: alts:alternatives __ '|' alt:alternative | alt:alternative

rule: name:rule_name ':' alts:alternatives '\n'+

grammar: verbatim:verbatim_block* settings:setting* rules:rule+
